# mole

./: .gitignore  ARCHITECTURE.md  README.md  REVIEW_PLAN.md  SUPERVISED_HANDOFF.md  SUPERVISED_PLAN.md  WORKFLOW.md  pyproject.toml  requirements-prep.txt  requirements.txt
attmask/: docloader.py  extract_embeddings.py  loader.py  main_attmask.py  requirements.txt  utils.py  visualize_augmentations.py
attmask/models/: head.py  vision_transformer.py
configs/: antwerp_base.yaml  antwerp_bin.yaml  brackley.yaml  brackley_bin.yaml  historical_wi.yaml  pooled_bin.yaml  pretrain.yaml  shakedown.yaml  smoke.yaml  sup_head.yaml
scripts/: assemble_pooled.sh  check_token_cache.py  run_doc_metric.py  run_loao.sh  run_netvlad_loao.py  sup_probe.py  train_zone_detector.py
src/mole/: __init__.py  config.py  progress.py
src/mole/cli/: __init__.py  main.py
src/mole/cluster/: __init__.py  finch.py  run.py
src/mole/data/: __init__.py  augment.py  datasets.py  docids.py  patches.py  zones.py
src/mole/embed/: __init__.py  extract.py  pooling.py  vlad.py
src/mole/eval/: __init__.py  compare.py  rerank.py  retrieval.py
src/mole/lineage/: __init__.py  registry.py
src/mole/prep/: __init__.py  binarize.py  detect.py  pagexml.py  qc.py  run.py
src/mole/review/: __init__.py  bokeh_map.py  images.py  render.py  suggest.py
src/mole/selfsup/: __init__.py  _nn.py  _train_utils.py  attmask.py  checkpoint.py  dataset.py  distributed.py  head.py  loss.py  train.py  vit.py  viz.py  wrapper.py
src/mole/supervised/: __init__.py  datasets.py  docmetric.py  metric.py  netvlad.py  probe.py  tokens.py
src/mole/viz/: __init__.py  codebook.py  scatter.py
tests/: test_binarize.py  test_cluster_finch.py  test_codebook_reservoir.py  test_codebook_viz.py  test_doc_metric.py  test_docids.py  test_embed_codebook.py  test_embed_foreground.py  test_embed_head.py  test_embed_invert.py  test_embed_meanpool.py  test_embed_whiten.py  test_eval_compare.py  test_eval_rerank.py  test_eval_retrieval.py  test_foreground.py  test_multiframe_tiff.py  test_netvlad.py  test_pagexml.py  test_review_render.py  test_review_suggest.py  test_sup_datasets.py  test_sup_metric.py  test_sup_sampler.py  test_sup_train.py  test_viz_scatter.py
